--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
 		"aws-iot-device-sdk": "^2.2.1",
+		"keypress": "^0.2.1",
 		"moment": "^2.22.1",
 		"noble": "^1.9.1",
 		"nodemon": "^1.17.4",
