--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-	"dependencies": {
-		"aws-iot-device-sdk": "^2.2.1",
-		"keypress": "^0.2.1",
-		"moment": "^2.22.1",
-		"noble": "^1.9.1",
-		"nodemon": "^1.17.4",
-		"sphero": "^0.9.2"
-	}
+  "dependencies": {
+    "aws-iot-device-sdk": "^2.2.1",
+    "keypress": "^0.2.1",
+    "moment": "^2.22.1",
+    "noble": "^1.9.1",
+    "ask-sdk-core": "^2.0.7",
+    "ask-sdk-model": "^1.3.1",
+    "nodemon": "^1.17.4",
+    "sphero": "^0.9.2"
+  }
 }
